--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
-    <a class="btn btn-lg btn-dark" href="/ideaboard/list">아이디어 게시판</a>
+    <a class="btn btn-lg btn-dark" href="/ideaboard">아이디어 게시판</a>
+<!--    <a class="btn btn-lg btn-dark" href="/api/ideaboard/getlist">아이디어 게시판</a>-->
 </body>
 </html>
