--- a/src/main/resources/templates/ideaboard/list.html
+++ b/src/main/resources/templates/ideaboard/list.html
@@ -14,7 +14,7 @@
 
     <div>
 
-        <table class="table table-sriped">
+        <table class="table table-striped">
             <thead>
             <tr>
                 <th>#</th>
