--- a/src/main/resources/templates/ideaboard/list.html
+++ b/src/main/resources/templates/ideaboard/list.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrinkto-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"  crossorigin="anonymous">
-    <!-- Custom styles for this template -->
-    <link href="/css/jumbotron-narrow.css" rel="stylesheet">
-    <title>Title</title>
-</head>
+<head th:replace="fragments/header :: header" />
 <body>
 <div class="container">
-
+    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
     <div>
 
         <table class="table table-striped">
@@ -42,7 +34,8 @@
         </table>
 
     </div>
-<a class="" href="/ideaboard/createForm">게시물 등록</a>
+    <a class="btn btn-primary" role="button" href="/ideaboard/createForm" >게시물 등록</a>
+    <div th:replace="fragments/footer :: footer"/>
 </div>
 </body>
 </html>
