1. Controller 패키지 구조 변경 web 패키지로 변경. 2. JPA 작동 가능한 Test 코드 작성 - SpringBootTest로 스프링 애플리케이션 실행 + TestRestTemplate(POST,GET,PUT...) api 던지는 기능

--- a/src/main/resources/templates/ideaboard/createForm.html
+++ b/src/main/resources/templates/ideaboard/createForm.html
@@ -32,7 +32,7 @@
         };
         $.ajax({
             type : 'POST',
-            url : "/api/ideaboard/post",
+            url : "/web/api/ideaboard/post",
             dataType : "json",
             contentType : "application/json; charset=utf-8",
             data : JSON.stringify(data)
