--- a/src/main/resources/templates/ideaboard/view.html
+++ b/src/main/resources/templates/ideaboard/view.html
@@ -48,7 +48,7 @@
 
         $.ajax({
             type : 'DELETE',
-            url : "/api/ideaboard/delete/"+id,
+            url : "/web/api/ideaboard/delete/"+id,
             dataType : "json",
             contentType : "application/json; charset=utf-8"
 
