--- a/src/main/resources/templates/ideaboard/updateForm.html
+++ b/src/main/resources/templates/ideaboard/updateForm.html
@@ -51,7 +51,7 @@
 
         $.ajax({
             type : 'PUT',
-            url : "/api/ideaboard/update",
+            url : "/web/api/ideaboard/update",
             dataType : "json",
             contentType : "application/json; charset=utf-8",
             data : JSON.stringify(data)
