--- a/src/main/resources/templates/web/ideaboard/view.html
+++ b/src/main/resources/templates/web/ideaboard/view.html
@@ -34,8 +34,8 @@
 
     </div>
     <a class="btn btn-primary" id="btn-delete" role="button">삭제</a>
-    <a class="btn btn-primary" id="btn-update" th:onclick="|location.href='@{/ideaboard/updateForm(id=${ideaBoard.id})}'|" role="button">수정</a>
-    <a class="btn btn-lg btn-dark" href="/ideaboard" role="button">리스트</a>
+    <a class="btn btn-primary" id="btn-update" th:onclick="|location.href='@{/web/ideaboard/updateForm(id=${ideaBoard.id})}'|" role="button">수정</a>
+    <a class="btn btn-lg btn-dark" href="/web/ideaboard" role="button">리스트</a>
     <div th:replace="fragments/footer :: footer"/>
 </div>
 </body>
@@ -55,7 +55,7 @@
 
         }).done(function(){
             alert("삭제성공");
-            location='/ideaboard'
+            location='/web/ideaboard'
         }).fail(function(error){
             console.log(JSON.stringify(error));
         })
