--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,19 @@
 
 </head>
 <body>
-    <a class="btn btn-lg btn-dark" href="/ideaboard">아이디어 게시판</a>
+<div class="container">
+
+    <a class="btn btn-lg btn-dark" href="/web/ideaboard/list">아이디어 게시판</a>
 <!--    <a class="btn btn-lg btn-dark" href="/api/ideaboard/getlist">아이디어 게시판</a>-->
+    <div>
+        <a th:if="${userName == null}" href="/oauth2/authorization/google" class="btn btn-success active" role="button" >구글 로그인</a>
+    </div>
+    <div>
+        <a th:if="${userName == null}" href="/oauth2/authorization/naver" class="btn btn-success active" role="button" >네이버 로그인</a>
+    </div>
+        <a th:if="${userName != null}" href="/logout" class="btn btn-success active" role="button" ><span th:text="${userName}" ></span>Logout</a>
+
+</div>
+
 </body>
 </html>
