1. 설정이 꼬여 다시 test 설정 복원

--- a/src/main/resources/templates/web/ideaboard/updateForm.html
+++ b/src/main/resources/templates/web/ideaboard/updateForm.html
@@ -40,13 +40,13 @@
 
     $('#btn-update').on('click', function(){
         alert("클릭")
-
+        debugger;
         var data = {
             id : $('#id').val(),
             title : $('#title').val(),
             content : $('#content').val(),
-            writeDate : $('#writeDate').val(),
-            updateDate : $('#updateDate').val()
+            writeDate : "",
+            updateDate : ""
         };
 
         $.ajax({
