--- a/src/main/resources/templates/web/ideaboard/createForm.html
+++ b/src/main/resources/templates/web/ideaboard/createForm.html
@@ -41,6 +41,7 @@
             alert("등록성공");
             location='/';
         }).fail(function(error){
+            console.log(JSON.stringify(error));
             alert(JSON.stringify(error));
         })
     });
