--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container">
 
-    <a class="btn btn-lg btn-dark" href="/web/ideaboard/list">아이디어 게시판 v3</a>
+    <a class="btn btn-lg btn-dark" href="/web/ideaboard/list">아이디어 게시판 v3 배포테스트1</a>
 <!--    <a class="btn btn-lg btn-dark" href="/api/ideaboard/getlist">아이디어 게시판</a>-->
     <div>
         <a th:if="${userName == null}" href="/oauth2/authorization/google" class="btn btn-success active" role="button" >구글 로그인</a>
