--- a/src/main/resources/templates/web/ideaboard/updateForm.html
+++ b/src/main/resources/templates/web/ideaboard/updateForm.html
@@ -60,7 +60,8 @@
             alert("수정성공");
             location='/web/ideaboard/view?id='+success;
         }).fail(function(error){
-            alert(JSON.stringify(error));
+            console.log(error)
+            alert("수정 에러");
         })
     });
 
