--- a/src/main/resources/templates/web/ideaboard/view.html
+++ b/src/main/resources/templates/web/ideaboard/view.html
@@ -58,6 +58,8 @@
             location='/web/ideaboard/list'
         }).fail(function(error){
             console.log(JSON.stringify(error));
+            alert("삭제 에러")
+            location='/web/ideaboard/list'
         })
     });
 
